---------------------------------------------------------------------------------------------------
Version: 1.16.3
Date: 2022-12-19

  Bugfixes:
    - Fixed that nuking the boss can kill the player vision.
    - Fixed a tab handler crash with LTN management window.

---------------------------------------------------------------------------------------------------
Version: 1.16.2
Date: 2022-12-16

  Bugfixes:
    - Fix a crash when launching Psi tracking satellite.

---------------------------------------------------------------------------------------------------
Version: 1.16.1
Date: 2022-12-16

  Changes:
    - "construction bot not repairable" always apply, regardless of defense enhance option.

  Bugfixes:
    - Fix a crash when spawn a boss on a not supported race.

---------------------------------------------------------------------------------------------------
Version: 1.16.0
Date: 2022-12-12

  Major Features:
    - ----- Boss Framework (Proof of Concept release) -----
    - Boss spawner is revealed by launching a "Psi Tracking Satellite".
    - Currently only supported by **erm_zerg** and **erm_protoss**. Plan to support all races when it's out of POC phase.
    - The goal of this mode is time trail boss fight and of course, to rekt your base.
    - Added Psi Tracking Satellite. It reveals a boss spawner and returns 1200 space science pack.
    - Once boss spawner revealed, launching additional Psi Tracking Satellite will not spawn new boss until the existing boss has either killed or despawned.
    - The map chunk where the boss sit is revealed to players.
    - Boss sends out elite attack group periodically. (approx twice per nauvis day)
    - Boss performs various attacks when it takes damage.
    - When the boss is defeated, infinity chest(s) with intermediate products will spawn for 14 nauvis days. (appox 1.5hr game time)
    - When you don't defeat the boss in time, it'll release super attacks to your base before it despawn!